Testing overflow-y to keep scrollbar and prevent width change

--- a/css/slyder.css
+++ b/css/slyder.css
@@ -5,6 +5,7 @@
 	-webkit-transform-style: preserve-3d;
 	-moz-transform-style: preserve-3d;
 	transform-style: preserve-3d;
+	overflow-y: scroll;
 }
 
 .sly-page--current {
